ezyplot-x1/force-app/main/default/objects/LR_Leaseholds__c/LR_Leaseholds__c.object-meta.xml
<CustomObject>
    <label>LR Leasehold</label>
    <nameField>
        <label>LR Leasehold</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LR Leaseholds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>