ezyplot-x1/force-app/main/default/objects/LR_Leaseholds__c/fields/Associated_Property_Description_ID__c.field-meta.xml
<CustomField>
    <fullName>Associated_Property_Description_ID__c</fullName>
    <label>Associated Property Description ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>