ezyplot-x1/force-app/main/default/objects/LR_Leaseholds__c/fields/Date_of_Lease__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Lease__c</fullName>
    <label>Date of Lease</label>
    <length>255</length>
    <type>Text</type>
</CustomField>