ezyplot-x1/force-app/main/default/objects/LR_Leaseholds__c/fields/LeaseTerm_length__c.field-meta.xml
<CustomField>
    <fullName>LeaseTerm_length__c</fullName>
    <label>LeaseTerm length</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>