ezyplot-x1/force-app/main/default/objects/LR_Leaseholds__c/fields/LeaseTerm_start_date__c.field-meta.xml
<CustomField>
    <fullName>LeaseTerm_start_date__c</fullName>
    <label>LeaseTerm start date</label>
    <type>Date</type>
</CustomField>