ezyplot-x1/force-app/main/default/objects/LR_Leaseholds__c/fields/OS_UPRN__c.field-meta.xml
<CustomField>
    <fullName>OS_UPRN__c</fullName>
    <label>OS UPRN</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>