ezyplot-x1/force-app/main/default/objects/LR_Leaseholds__c/fields/Reg_Order__c.field-meta.xml
<CustomField>
    <fullName>Reg_Order__c</fullName>
    <label>Reg Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>