ezyplot-x1/force-app/main/default/objects/LR_Leaseholds__c/fields/Unique_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Unique_Identifier__c</fullName>
    <label>Unique Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>