ezyplot-x1/force-app/main/default/objects/LR_Leaseholds__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Register_Property_Description__c</columns>
    <columns>County__c</columns>
    <columns>Region__c</columns>
    <columns>Associated_Property_Description_ID__c</columns>
    <columns>Associated_Property_Description__c</columns>
    <columns>OS_UPRN__c</columns>
    <columns>Price_Paid__c</columns>
    <columns>Reg_Order__c</columns>
    <columns>Term__c</columns>
    <columns>Date_of_Lease__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>